`createEntityData`